--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,5 +1,6 @@
 .about {
-  h1, h2 {
+  h1,
+  h2 {
     text-align: center;
 
     @include respond-to(medium) {
@@ -30,14 +31,14 @@
     flex: 0 0 calc(100% / 2 - 1rem);
     flex-basis: calc(100% / 2 - 1rem); // for IE11
     min-height: 130px;
-    margin: .5rem;
+    margin: 0.5rem;
     list-style: none;
     text-align: center;
 
     @include respond-to(small) {
       flex: 0 0 calc(100% / 2 - 1rem);
       flex-basis: calc(100% / 2 - 1rem); // for IE11
-      margin: .5rem;
+      margin: 0.5rem;
     }
 
     @include respond-to(medium) {
@@ -60,7 +61,7 @@
     }
 
     .animation {
-      border: .2em solid $blue;
+      border: 0.2em solid $blue;
       border-bottom-color: transparent;
       border-radius: 50%;
       animation: 1.5s loader linear infinite;
@@ -76,7 +77,9 @@
       }
     }
 
-    .svg, .jam, .kiss {
+    .svg,
+    .jam,
+    .kiss {
       width: auto;
       font-size: 1.5rem;
     }
@@ -95,12 +98,12 @@
     hyphens: auto;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: -2px;
       left: 50%;
       transform: translateX(-50%);
-      height: 2px;
+      height: 3px;
       width: calc(100% - 40px);
       background-color: #fff;
     }
